2008-08-09  Frank Pagliughi <fpagliughi@mindspring.com>

	* host/linux/ecos_usbserial.c (ecos_usbserial_probe): fix compiling
	on older kernels.

2008-07-13  Andrew Lunn  <andrew.lunn@ascom.ch>

	* host/linux/ecos_usbserial.c (ecos_usbserial_probe): new probe
	function so that we ignore the ACM interface, otherwise we end up
	with a useless /dev/ttyUSB device. Also allow to compile with
	kernel 2.6.26-rc9.
	
2008-07-12  Frank Pagliughi <fpagliughi@mindspring.com>

	* Generic USB Serial package created.  
  	  Some files were rearranged during the import and the Documentation
	  written Andrew Lunn.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2008 FSF
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available
// in accordance with section (3) of the GNU General Public License.
//